[gd_scene load_steps=33 format=3 uid="uid://b80oxjmy8lgn6"]

[ext_resource type="Script" path="res://Scripts/MeatPlayer.gd" id="1_0sif0"]
[ext_resource type="Texture2D" uid="uid://bpv21lh51gm0m" path="res://Icons/Players/MeatBack1.png" id="2_w5tas"]
[ext_resource type="Texture2D" uid="uid://b4p1t4yr7ljah" path="res://Icons/Players/MeatBack2.png" id="3_7dk8f"]
[ext_resource type="Texture2D" uid="uid://lnp1pfdoyggg" path="res://Icons/Players/MeatBackStill.png" id="4_pntxs"]
[ext_resource type="Texture2D" uid="uid://c1pedc08d0mq6" path="res://Icons/Players/MeatFront1.png" id="5_bec2g"]
[ext_resource type="Texture2D" uid="uid://bg4x84w0cnep" path="res://Icons/Players/MeatFront2.png" id="6_qjlkr"]
[ext_resource type="Texture2D" uid="uid://dh1m0tw86oxsc" path="res://Icons/Players/MeatFrontStill.png" id="7_0v5ko"]
[ext_resource type="Texture2D" uid="uid://igbfi1o8fe5" path="res://Icons/Players/MeatLeftStill.png" id="8_tui8k"]
[ext_resource type="Texture2D" uid="uid://beglhcuidkhhu" path="res://Icons/Players/MeatLeft1.png" id="9_yc1w7"]
[ext_resource type="Texture2D" uid="uid://durx62ccne15" path="res://Icons/Players/MeatRightStill.png" id="10_md2lk"]
[ext_resource type="Texture2D" uid="uid://dj5vpa4tnjys4" path="res://Icons/Players/MeatRight1.png" id="11_5gyvu"]
[ext_resource type="Script" path="res://Scripts/PlayerInteractionHandler.gd" id="12_w2017"]
[ext_resource type="Script" path="res://Scripts/ItemData.gd" id="13_h0fiq"]
[ext_resource type="Texture2D" uid="uid://cc31v2g4q1rwn" path="res://Icons/Food/RawMeat.png" id="13_thfru"]
[ext_resource type="PackedScene" uid="uid://cknkwm6gh3uwj" path="res://Scenes/Stove.tscn" id="15_lrkew"]
[ext_resource type="Texture2D" uid="uid://b1steuptjgw87" path="res://Icons/Food/CookedMeat.png" id="15_pmuq5"]
[ext_resource type="Script" path="res://Scripts/CounterData.gd" id="15_r5w87"]
[ext_resource type="Script" path="res://Scripts/InventoryHandler.gd" id="16_ojmo7"]
[ext_resource type="PackedScene" uid="uid://co1unga67midx" path="res://Scenes/CounterLeft.tscn" id="17_avsfc"]
[ext_resource type="PackedScene" uid="uid://s7k3bscbj4ba" path="res://Scenes/Table.tscn" id="18_hbv5v"]
[ext_resource type="PackedScene" uid="uid://boym03rgpbx1e" path="res://Scenes/CounterRight.tscn" id="19_wt6t0"]
[ext_resource type="PackedScene" uid="uid://cbh7nfwydkv5v" path="res://Scenes/CounterTop.tscn" id="20_jtvou"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xxkhc"]
animations = [{
"frames": [{
"duration": 1.7,
"texture": ExtResource("2_w5tas")
}, {
"duration": 1.7,
"texture": ExtResource("3_7dk8f")
}],
"loop": true,
"name": &"MeatBack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pntxs")
}],
"loop": true,
"name": &"MeatBackStill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.7,
"texture": ExtResource("5_bec2g")
}, {
"duration": 1.7,
"texture": ExtResource("6_qjlkr")
}],
"loop": true,
"name": &"MeatFront",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0v5ko")
}],
"loop": true,
"name": &"MeatFrontStill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.7,
"texture": ExtResource("8_tui8k")
}, {
"duration": 1.7,
"texture": ExtResource("9_yc1w7")
}],
"loop": true,
"name": &"MeatLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_tui8k")
}],
"loop": true,
"name": &"MeatLeftStill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.7,
"texture": ExtResource("10_md2lk")
}, {
"duration": 1.7,
"texture": ExtResource("11_5gyvu")
}],
"loop": true,
"name": &"MeatRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_md2lk")
}],
"loop": true,
"name": &"MeatRightStill",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4ksm"]
size = Vector2(42, 40)

[sub_resource type="Resource" id="Resource_qxwfc"]
script = ExtResource("13_h0fiq")
ItemName = "Raw Meat"
Icon = ExtResource("13_thfru")

[sub_resource type="Resource" id="Resource_l58xr"]
script = ExtResource("13_h0fiq")
ItemName = "Cooked Meat"
Icon = ExtResource("15_pmuq5")

[sub_resource type="Resource" id="Resource_chpms"]
script = ExtResource("15_r5w87")
CounterName = "Stove"
CounterModelPrefab = ExtResource("15_lrkew")

[sub_resource type="Resource" id="Resource_ktxpb"]
script = ExtResource("15_r5w87")
CounterName = "Counter Left"
CounterModelPrefab = ExtResource("17_avsfc")

[sub_resource type="Resource" id="Resource_f34l2"]
script = ExtResource("15_r5w87")
CounterName = "Table"
CounterModelPrefab = ExtResource("18_hbv5v")

[sub_resource type="Resource" id="Resource_7mdd6"]
script = ExtResource("15_r5w87")
CounterName = "Counter Right"
CounterModelPrefab = ExtResource("19_wt6t0")

[sub_resource type="Resource" id="Resource_kwy0k"]
script = ExtResource("15_r5w87")
CounterName = "Counter Top"
CounterModelPrefab = ExtResource("20_jtvou")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v5tsk"]
radius = 19.0
height = 62.0

[node name="MeatPlayer" type="CharacterBody2D"]
z_index = 10
position = Vector2(1400, 350)
script = ExtResource("1_0sif0")

[node name="MeatPlayerSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.0839071, 0.0757178)
sprite_frames = SubResource("SpriteFrames_xxkhc")
animation = &"MeatRight"
frame_progress = 0.449803

[node name="useless" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6, 36)
shape = SubResource("RectangleShape2D_m4ksm")

[node name="MeatCurrentInteraction" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="InteractionArea" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 0
script = ExtResource("12_w2017")
ItemTypes = Array[ExtResource("13_h0fiq")]([SubResource("Resource_qxwfc"), SubResource("Resource_l58xr")])
CounterTypes = Array[ExtResource("15_r5w87")]([SubResource("Resource_chpms"), SubResource("Resource_ktxpb"), SubResource("Resource_f34l2"), SubResource("Resource_7mdd6"), SubResource("Resource_kwy0k")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(7, 28)
shape = SubResource("CapsuleShape2D_v5tsk")

[node name="InventoryUI" type="Control" parent="." node_paths=PackedStringArray("InventoryGrid")]
layout_mode = 3
anchors_preset = 0
offset_left = -300.0
offset_top = -150.0
offset_right = -240.0
offset_bottom = -90.0
script = ExtResource("16_ojmo7")
InventoryGrid = NodePath("Panel/MarginContainer/GridContainer")

[node name="Panel" type="Panel" parent="InventoryUI"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0

[node name="MarginContainer" type="MarginContainer" parent="InventoryUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="InventoryUI/Panel/MarginContainer"]
layout_mode = 2

[connection signal="OnItemDropped" from="InteractionArea" to="InventoryUI" method="DropItem"]
[connection signal="OnItemPickedUp" from="InteractionArea" to="InventoryUI" method="PickupItem"]
[connection signal="area_entered" from="InteractionArea" to="InteractionArea" method="OnBodyEnteredArea"]
[connection signal="area_exited" from="InteractionArea" to="InteractionArea" method="OnBodyExitedArea"]
